# eww-dock

./: Cargo.toml  README.md
src/: main.rs
